--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "peerDependencies": {
     "@types/ember": "^2.7.34",
-    "typescript": "^2.1.0"
+    "typescript": "^2.1.0||^2.2.0"
   },
   "engines": {
     "node": ">= 0.12.0"
